--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons/commons-cli-1.4/commons-cli-1.4.jar" sourcepath="lib/commons/commons-cli-1.4/commons-cli-1.4-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/htsjdk/htsjdk-2.12.0-SNAPSHOT.jar" sourcepath="lib/htsjdk/htsjdk-2.12.0-SNAPSHOT-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
