--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/commons/commons-cli-1.4/commons-cli-1.4.jar" sourcepath="lib/commons/commons-cli-1.4/commons-cli-1.4-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/htsjdk/htsjdk-2.12.0-SNAPSHOT.jar" sourcepath="lib/htsjdk/htsjdk-2.12.0-SNAPSHOT-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
@@ -20,5 +19,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/michael/git/JACUSA2/lib/htsjdk/htsjdk-3.0.5-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
