--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/commons/commons-cli-1.4/commons-cli-1.4.jar" sourcepath="lib/commons/commons-cli-1.4/commons-cli-1.4-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
@@ -19,6 +14,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/michael/git/JACUSA2/lib/htsjdk/htsjdk-3.0.5-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/home/michael/git/JACUSA2/lib/htsjdk/htsjdk-4.1.3-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-17-openjdk">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
